# snapgrab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  llms-full.txt  llms.txt  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
snapgrab/: __init__.py  __main__.py  browser.py  core.py  mcp_server.py  metadata.py  vision.py
snapgrab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/unit/: test_cli.py  test_core.py  test_metadata.py  test_vision.py
